# espeak

./: Makefile.am  configure.ac
src/: Makefile.am  dictionary.cpp  numbers.cpp  readclause.cpp  setlengths.cpp  sonic.cpp  speak.cpp  speak_lib.cpp  speech.h  synthdata.cpp  synthesize.cpp  synthesize.h  tr_languages.cpp  translate.cpp  translate.h  wavegen.cpp
